--- a/templates/category_document_types.html
+++ b/templates/category_document_types.html
@@ -314,7 +314,7 @@ function generateDocumentTypesHTML(types) {
             </div>
             <div class="document-type-info">
                  <div class="department-badge">
-                    <i data-feather="briefcase"></i>
+                     <i data-feather="folder"></i>
                     <span>${type.department_name || 'No Department'}</span>
                 </div>
                  <div class="department-badge">
