--- a/templates/documents.html
+++ b/templates/documents.html
@@ -108,6 +108,7 @@
                         <option value="1">Documentos</option>
                         <option value="2">Assinatura</option>
                         <option value="3">WorkFlow</option>
+                        <option value="4">Holerites</option>
                     </select>
                 </div>
                 <div class="form-group">
