--- a/templates/document_types_departments.html
+++ b/templates/document_types_departments.html
@@ -52,10 +52,10 @@
 <!-- Add Document Modal -->
 <div id="addDocumentModal" class="modal">
     <div class="modal-content">
-        <h3>Add Document</h3>
+        <h3>Adicionar Documento</h3>
         <form id="addDocumentForm" onsubmit="createDocument(event)">
             <div class="form-group">
-                <label for="documentTitle">Document Title</label>
+                <label for="documentTitle">Título do Documento</label>
                 <input type="text" id="documentTitle" name="titulo" >
             </div>
             <div class="form-grid">
@@ -70,16 +70,16 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="documentTitle">User Name</label>
+                <label for="documentTitle">Nome do Usuário</label>
                 <input type="text" id="name-user" name="name-user" disabled required>
             </div>
             <div class="form-group">
-                <label for="documentFile">Upload File</label>
+                <label for="documentFile">Carregar Arquivo</label>
                 <input type="file" id="documentFile" name="file" required>
             </div>
             <div class="modal-actions">
-                <button type="button" class="action-btn" onclick="hideModal('addDocumentModal')">Cancel</button>
-                <button type="submit" class="action-btn primary">Upload</button>
+                <button type="button" class="action-btn" onclick="hideModal('addDocumentModal')">Cancelar</button>
+                <button type="submit" class="action-btn primary">Carregar</button>
                 <input type="hidden" name="department_id" id="department_id" value="{{category.department_id}}">
                 <input type="hidden" name="category_id" id="category_id" value="{{category.id}}">
                 <input type="hidden" name="document_type_id" id="document_type_id" value="{{document_type.id}}">
